--- a/Client/package.json
+++ b/Client/package.json
@@ -11,17 +11,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^15.2.8",
+    "@angular/cdk": "^16.0.0",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
-    "@angular/material": "^15.2.8",
+    "@angular/material": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@asymmetrik/ngx-leaflet": "^15.0.1",
-    "leaflet": "^1.9.3",
+    "@ngrx/effects": "^16.0.0",
+    "@ngrx/store": "^16.0.0",
     "ol": "^7.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,7 +32,6 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
-    "@types/leaflet": "^1.9.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
