--- a/Client/package.json
+++ b/Client/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@ngrx/effects": "^16.0.0",
+    "@ngrx/entity": "^16.0.0",
     "@ngrx/store": "^16.0.0",
+    "@ngrx/store-devtools": "^16.0.0",
     "ol": "^7.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,6 +33,7 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@ngrx/schematics": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
