--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,8 @@
     "@ngrx/entity": "^16.0.0",
     "@ngrx/store": "^16.0.0",
     "@ngrx/store-devtools": "^16.0.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "ol": "^7.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,6 +37,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@ngrx/schematics": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash-es": "^4.17.7",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
