Add barogram component with test data

--- a/Client/package.json
+++ b/Client/package.json
@@ -24,8 +24,12 @@
     "@ngrx/entity": "^16.0.0",
     "@ngrx/store": "^16.0.0",
     "@ngrx/store-devtools": "^16.0.0",
+    "chart.js": "^3.6.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "ng2-charts": "^4.1.1",
     "ol": "^7.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
