--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store-devtools": "^16.0.0",
     "chart.js": "^4.3.0",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-crosshair": "^1.2.0",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -40,6 +41,7 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@ngrx/schematics": "^16.0.0",
+    "@types/chartjs-plugin-crosshair": "^1.1.1",
     "@types/jasmine": "~4.3.0",
     "@types/lodash-es": "^4.17.7",
     "jasmine-core": "~4.5.0",
