--- a/Client/package.json
+++ b/Client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ogn-loxn",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18 <19"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
