Try to fix routing issue on deplyed web app

--- a/Client/package.json
+++ b/Client/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postbuild": "cp azure-static-web-apps.config.json dist/ogn-loxn/"
   },
   "private": true,
   "dependencies": {
