--- a/Client/package.json
+++ b/Client/package.json
@@ -7,10 +7,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration production",
+    "build": "ng build --configuration production --base-href /flugsport-wien-ogn",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "postbuild": "cp routes.json dist/ogn-loxn/"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
