--- a/.gitignore
+++ b/.gitignore
@@ -2009,3 +2009,4 @@ node_modules/moment/src/locale/zh-hk.js
 node_modules/moment/src/locale/zh-mo.js
 node_modules/moment/src/locale/zh-tw.js
 node_modules/moment/ts3.1-typings/moment.d.ts
+Api/FlugsportWienOgnApi/flugsport-wien-ogn.tar
