--- a/Api/FlugsportWienOgnApi/appsettings.json
+++ b/Api/FlugsportWienOgnApi/appsettings.json
@@ -1,8 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*"
