Add database storage for live and historical flight data

--- a/Api/FlugsportWienOgnApi/appsettings.json
+++ b/Api/FlugsportWienOgnApi/appsettings.json
@@ -7,5 +7,8 @@
       "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Database": "Server=localhost\\SQLEXPRESS;Database=FlugsportWienOgn;Trusted_Connection=True;Encrypt=False;"
+  }
 }
