--- a/Api/FlugsportWienOgnApi/FlugsportWienOgnApi.csproj
+++ b/Api/FlugsportWienOgnApi/FlugsportWienOgnApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="4.0.0" />
     <PackageReference Include="NetTopologySuite.IO.GeoJSON4STJ" Version="4.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -15,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Arps\Arps.csproj" />
+    <ProjectReference Include="..\Aprs\Aprs.csproj" />
     <ProjectReference Include="..\FlugsportWienOgn.Database\FlugsportWienOgn.Database.csproj" />
   </ItemGroup>
 
