--- a/Api/FlugsportWienOgnApi/appsettings.json
+++ b/Api/FlugsportWienOgnApi/appsettings.json
@@ -10,5 +10,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Database": "Server=localhost\\SQLEXPRESS;Database=FlugsportWienOgn;Trusted_Connection=True;Encrypt=False;"
+  },
+  "AprsConfig": {
+    "AprsHost": "aprs.glidernet.org",
+    "AprsPort": 14580,
+    "AprsUser": "fswogn",
+    "AprsPassword": "-1",
+    "DdbAircraftListUrl": "https://ddb.glidernet.org/download/?t=1",
+    "FilterPositionLatitude": 47.7,
+    "FilterPositionLongitude": 13.3,
+    "FilterRadius": 300
   }
 }
