Add database cleanup once a day, Add aprsConfig and ognConfig to appsettings, Known aircraft are now seeded in db

--- a/Api/FlugsportWienOgnApi/appsettings.json
+++ b/Api/FlugsportWienOgnApi/appsettings.json
@@ -11,6 +11,10 @@
   "ConnectionStrings": {
     "Database": "Server=localhost\\SQLEXPRESS;Database=FlugsportWienOgn;Trusted_Connection=True;Encrypt=False;"
   },
+  "OgnConfig": {
+    "AustrianAirspaceOnly": true,
+    "FlightDataMaxAge":  30 // Minutes
+  },
   "AprsConfig": {
     "AprsHost": "aprs.glidernet.org",
     "AprsPort": 14580,
