Add endpoint to search for aircraft. Add corrected ogn aircraft type dictionary to AircraftService. Add calculated vertical speed average. Updated known gliders. Add database to docker compose

--- a/Api/FlugsportWienOgnApi/appsettings.json
+++ b/Api/FlugsportWienOgnApi/appsettings.json
@@ -9,11 +9,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Server=localhost\\SQLEXPRESS;Database=FlugsportWienOgn;Trusted_Connection=True;Encrypt=False;"
+    "Database": "Host=db;Database=FlugsportWienOgn;Username=postgres;Password=yourpassword"
   },
   "OgnConfig": {
     "AustrianAirspaceOnly": true,
-    "FlightDataMaxAge":  30 // Minutes
+    "FlightDataMaxAge": 30, // Minutes
+    "IgnoreUnregisteredAircraft": false,
+    "IgnoreParagliders": false
   },
   "AprsConfig": {
     "AprsHost": "aprs.glidernet.org",
