--- a/Api/FlugsportWienOgnApi/docker-compose.yml
+++ b/Api/FlugsportWienOgnApi/docker-compose.yml
@@ -1,5 +1,19 @@
 services:
-  web:
-    image: "flugsport-wien-ogn-image"
-    ports:
-      - "8000:80"
+    web:
+        image: "flugsport-wien-ogn-image"
+        ports:
+            - "8000:80"
+
+    db:
+        image: postgres
+        environment:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: yourpassword
+            POSTGRES_DB: FlugsportWienOgn
+        ports:
+        - "5432:5432"
+        volumes:
+        - pgdata:/var/lib/postgresql/data
+
+volumes:
+    pgdata:
